# goit_python_web_homework_04

./: README.md  pyproject.toml
web_homework_04/: main.py
web_homework_04/storage/: data.json
